First attempt at creating axes and bars

--- a/barchart.html
+++ b/barchart.html
@@ -8,8 +8,20 @@
   </head>
 
   <body>
-    <h1>Test</h1>
-    <p>This is a test.</p>
+    <canvas id="recTest" width="200" height="100" style="border:1px solid #000000;">
   </body>
 
 </html>
+
+<!--
+<!DOCTYPE html>
+<html>
+<body>
+
+<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
+Your browser does not support the HTML5 canvas tag.
+</canvas>
+
+</body>
+</html>
+-->
