--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="div1"></div>
     <div id="div3"></div>
+    <div id="div5"></div>
     <script src="barchart.js"></script>
   </body>
 
