Started adding the chart title

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <div id="div1"></div>
     <div id="div3"></div>
     <div id="div5"></div>
+    <div id="div7"></div>
     <script src="barchart.js"></script>
   </body>
 
-
 </html>
-
-<!--<div style="width:500px;height:100px;border:1px solid #000;">This is a rectangle!</div>-->
