--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
 
   <body>
-    <div id="div1"></div>
-    <div id="div3"></div>
-    <div id="div5"></div>
-    <div id="div7"></div>
+    <div id="div1"></div> <!-- chart area -->
+    <div id="div3"></div> <!-- X-axis label area -->
+    <div id="div5"></div> <!-- Y-axis label area -->
+    <div id="div7"></div> <!-- title area -->
     <script src="barchart.js"></script>
   </body>
 
