Added a legend for the stacked bar chart

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="div3"></div> <!-- X-axis label area -->
     <div id="div5"></div> <!-- Y-axis label area -->
     <div id="div7"></div> <!-- title area -->
+    <div id="div8"></div>
     <script src="barchart.js"></script>
   </body>
 
