Converted the singleBarChart function to use jQuery

--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
   <head>
     <title>Bar Chart</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
 
   <body>
     <div id="div1"></div> <!-- chart area -->
-    <div id="div3"></div> <!-- X-axis label area -->
-    <div id="div5"></div> <!-- Y-axis label area -->
-    <div id="div7"></div> <!-- title area -->
+    <!--
+    <div id="div3"></div>
+    <div id="div5"></div>
+    <div id="div7"></div>
     <div id="div8"></div>
-    <script src="barchart.js"></script>
+    -->
+    <script src="barchart2.js"></script>
   </body>
 
 </html>
