--- a/index.html
+++ b/index.html
@@ -9,14 +9,29 @@
   </head>
 
   <body>
-    <div id="div1"></div> <!-- chart area -->
-    <!--
-    <div id="div3"></div>
-    <div id="div5"></div>
-    <div id="div7"></div>
-    <div id="div8"></div>
-    -->
+    <div id="chartArea"></div>
     <script src="barchart2.js"></script>
+    <script>
+      drawBarChart(
+        {
+          values: [[1000000,2000000,3000000,4000000],[2000000,4000000,6000000,8000000],[0,5000000,10000000,20000000],[4000000,3000000,2000000,1000000]],
+          labels: ["Label1","Label2","Label3","Label4"],
+          legend: [["Legend1","#008080"],["Legend2","#00FFFF"],["Legend3","#0000FF"],["Legend4","#000080"]],
+          scale: 2000000,
+          title: "Stacked Bar Chart"
+        },
+        {
+          height: 500,
+          width: 500,
+          spacing: 40,
+          labelColour: "#C0C0C0",
+          labelAlign: "center",
+          titleColour: "#000000",
+          titleSize: 16
+        },
+        $("#chartArea")[0]
+      );
+    </script>
   </body>
 
 </html>
