Corrected the spacing, comma, and semicolon errors caught by ESLint

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="barChart"></div>
     <div id="barChart2"></div>
-    <script src="barchart2.js"></script>
+    <script src="barchart.js"></script>
     <script>
       drawBarChart({values: [9.5,6,6,5,2.5,8,4], labels: ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"], scale: 2, title: "Hours Spent Coding, Week of Sept 16 - 22"}, {width: 600, height: 400, spacing: 20, colour: "#008080", labelColour: "#00FFFF", labelAlign: "center", titleColour: "#000080", titleSize: 18}, $("#barChart")[0]);
     </script>
